<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/mainlayout"
	android:orientation="vertical"
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	
	
	<TextView 
		android:id="@+id/activity_label"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:textSize="10pt"
		android:text="@string/activity_label" />
		
	<TextView
		android:id="@+id/activityName"
		android:layout_toRightOf="@id/activity_label"
		android:textColor="#FFF"
		android:gravity="right"
		android:paddingTop="5pt"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />	
	
	<View
		android:id="@+id/line1"
		android:layout_width="fill_parent"
       	android:layout_height="2dip"
       	android:layout_below="@id/activity_label"
       	android:background="#FF909090" />
			
	<TextView 
		android:id="@+id/keyword_label"
		android:layout_below="@id/line1"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:textSize="10pt"
		android:text="@string/keyword_label" />
	
	<TextView 
		android:id="@+id/keyword"
		android:textColor="#FFF"
		android:layout_below="@id/line1"
		android:layout_toRightOf="@id/keyword_label"
		android:gravity="right"
		android:paddingTop="5pt"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
			
	<View
		android:id="@+id/line2"
		android:layout_width="fill_parent"
       	android:layout_height="2dip"
       	android:layout_below="@id/keyword_label"
       	android:background="#FF909090" />
       	
    <TextView
		android:id="@+id/help"
		android:layout_below="@id/line2"
		android:paddingTop="10pt"
		android:text="@string/help"
		style="@style/helpText"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" />	
		
	<Button 
		android:id="@+id/exit" 
		android:layout_below="@id/help"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/exit" />	
		
	<Button 
		android:id="@+id/tryit" 
		android:layout_below="@id/help"
		android:layout_toRightOf="@id/exit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/tryit" />				
	
</RelativeLayout>